--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -25,16 +25,16 @@ nav:
   - Open the Sleigh Shop Door: 'challenges/c11.md'
   - Filter Out Poisoned Sources of Weather Data:  'challenges/c12.md'
 - Hints:
-  - Bushy Evergreen - Escape Ed: 'hints/h3.md'
-  - SugarPlum Mary - Linux Path: 'hints/h4.md'
-  - Sparkle Redberry - Xmas Cheer: 'hints/h5.md'
-  - Tangle Coalbox - Frosty Keypad: 'hints/h6.md'
-  - Minty Candycane - Holiday Hack Trail: 'hints/h7.md'
-  - Alabaster Snowball - Nyanshell:  'hints/h8.md'
-  - Pepper Minstix - Graylog: 'hints/h9.md'
-  - Holly Evergreen - Mongo Pilfer: 'hints/h10.md'
-  - Kent Tinseltooth - Smart Braces: 'hints/h11.md'
-  - Wunorse Openslae - Zeek JSON Analysis: 'hints/h12.md'
+  - Bushy Evergreen - "Escape Ed": 'hints/h3.md'
+  - SugarPlum Mary - "Linux Path": 'hints/h4.md'
+  - Sparkle Redberry - "Xmas Cheer": 'hints/h5.md'
+  - Tangle Coalbox - "Frosty Keypad": 'hints/h6.md'
+  - Minty Candycane - "Holiday Hack Trail": 'hints/h7.md'
+  - Alabaster Snowball - "Nyanshell":  'hints/h8.md'
+  - Pepper Minstix - "Graylog": 'hints/h9.md'
+  - Holly Evergreen - "Mongo Pilfer": 'hints/h10.md'
+  - Kent Tinseltooth - "Smart Braces": 'hints/h11.md'
+  - Wunorse Openslae - "Zeek JSON Analysis": 'hints/h12.md'
 - Conversations:
   - Alabaster Snowball: 'conversations/alabaster-snowball.md'
   - Bushy Evergreen: 'conversations/bushy-evergreen.md'
