Hint headers done

--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -27,7 +27,7 @@ nav:
 - Hints:
   - Bushy Evergreen - "Escape Ed": 'hints/h3.md'
   - SugarPlum Mary - "Linux Path": 'hints/h4.md'
-  - Sparkle Redberry - "Xmas Cheer": 'hints/h5.md'
+  - Sparkle Redberry - "Xmas Cheer Laser": 'hints/h5.md'
   - Tangle Coalbox - "Frosty Keypad": 'hints/h6.md'
   - Minty Candycane - "Holiday Hack Trail": 'hints/h7.md'
   - Alabaster Snowball - "Nyanshell":  'hints/h8.md'
