Cleanup and extensions

--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -1,14 +1,16 @@
 site_name: KringleCon 2019 Write-Up
-copyright: Copyright Thomas Bouve (@CraHan)
+copyright: 'Thomas Bouve - <a href="https://twitter.com/crahan">@CraHan</a>'
 theme:
   name: mkdocs
   highlightjs: true
   hljs_languages:
-    - pythons
+    - python
+    - css
 extra_css:
   - css/extra.css
 markdown_extensions:
   - attr_list
+  - admonition
   - toc:
       permalink: "#"
 nav:
