--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -29,16 +29,16 @@ nav:
 - Challenges:
   - Talk to Santa & Find the Turtle Doves: 'challenges/c1.md'
   - Unredact Threatening Document: 'challenges/c2.md'
-  - Windows Log Analysis - Evaluate Attack Outcome: 'challenges/c3.md'
-  - Windows Log Analysis - Determine Attacker Technique: 'challenges/c4.md'
-  - Network Log Analysis - Determine Compromised System: 'challenges/c5.md'
+  - Evaluate Attack Outcome: 'challenges/c3.md'
+  - Determine Attacker Technique: 'challenges/c4.md'
+  - Determine Compromised System: 'challenges/c5.md'
   - Splunk: 'challenges/c6.md'
   - Get Access to the Steam Tunnels: 'challenges/c7.md'
   - Bypassing the Frido Sleigh CAPTEHA: 'challenges/c8.md'
   - Retrieve the Scraps of Paper from Server: 'challenges/c9.md'
   - Recover Cleartext Document: 'challenges/c10.md'
   - Open the Sleigh Shop Door: 'challenges/c11.md'
-  - Filter Out Poisoned Sources of Weather Data:  'challenges/c12.md'
+  - Filter Out Poisoned Data Sources:  'challenges/c12.md'
 - Hints:
   - Bushy Evergreen - "Escape Ed": 'hints/h3.md'
   - SugarPlum Mary - "Linux Path": 'hints/h4.md'
