--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -72,6 +72,7 @@ nav:
   - capteha_api.py: 'scripts/capteha_api.py.md'
   - decrypt_pdf.py: 'scripts/decrypt_pdf.py.md'
   - match_user_agents.py: 'scripts/match_user_agents.py.md'
+  - token_proxy.py: 'scripts/token_proxy.py.md'
 - Misc:
   - Progress Tokens: 'misc/progress_tokens.md'
   - Interesting UI Elements: 'misc/interesting_ui.md'
