--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -50,12 +50,13 @@ nav:
   - Holly Evergreen - "Mongo Pilfer": 'hints/h10.md'
   - Kent Tinseltooth - "Smart Braces": 'hints/h11.md'
   - Wunorse Openslae - "Zeek JSON Analysis": 'hints/h12.md'
+# - Scripts: 'scripts.md'
 - Scripts:
   - find_code.py: 'scripts/find_code.py.md'
   - capteha_api.py: 'scripts/capteha_api.py.md'
+  - token_proxy.py: 'scripts/token_proxy.py.md'
   - decrypt_pdf.py: 'scripts/decrypt_pdf.py.md'
   - match_user_agents.py: 'scripts/match_user_agents.py.md'
-  - token_proxy.py: 'scripts/token_proxy.py.md'
 - Misc:
   - Progress Tokens: 'misc/progress_tokens.md'
   - Interesting UI Elements: 'misc/interesting_ui.md'
