--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -1,4 +1,4 @@
-site_name: KringleCon 2019 Write-Up
+site_name: CraHan's KringleCon 2 Write-Up
 site_author: Thomas Bouve
 copyright: Thomas Bouve - <a href="https://twitter.com/crahan">@CraHan</a>
 theme:
@@ -25,7 +25,7 @@ markdown_extensions:
   - toc:
       permalink: "#"
 nav:
-- TL;DR: 'index.md'
+- Home: 'index.md'
 - Challenges:
   - Talk to Santa & Find the Turtle Doves: 'challenges/c1.md'
   - Unredact Threatening Document: 'challenges/c2.md'
