New banner and title

--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -1,4 +1,4 @@
-site_name: CraHan's KringleCon 2 Write-Up
+site_name: CraHan's HHC 2019 Write-Up
 site_author: Thomas Bouve
 copyright: Thomas Bouve - <a href="https://twitter.com/crahan">@CraHan</a>
 theme:
