--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -1,4 +1,4 @@
-site_name: ''
+site_name: "2019 SANS HHC Write-Up"
 site_author: Thomas Bouve
 copyright: Thomas Bouve - <a href="https://twitter.com/crahan">@CraHan</a>
 theme:
